Navigation enabled in PodcastPlayer for InfoScreen,proper working of back button in PodcastPlayer & code added for Recorder & MyDrafts

--- a/react-native-react-native-recorder/android/src/main/res/layout/activity_main.xml
+++ b/react-native-react-native-recorder/android/src/main/res/layout/activity_main.xml
@@ -265,7 +265,7 @@
 					android:padding="@dimen/spacing_normal"
 					android:layout_gravity="center"
 					android:scaleType="center"
-					android:visibility="invisible"
+					android:visibility="visible"
 					android:src="@drawable/ic_delete_forever_36"/>
 
 			<ImageButton
