--- a/react-native-react-native-recorder/android/src/main/res/layout/activity_main.xml
+++ b/react-native-react-native-recorder/android/src/main/res/layout/activity_main.xml
@@ -132,11 +132,10 @@
 				>
 
 			<com.dimowner.audiorecorder.app.widget.WaveformView
-					android:id="@+id/record"
-					android:layout_width="wrap_content"
-					android:layout_height="@dimen/waveform_height"
-					android:layout_marginBottom="48dp"
-					/>
+				android:id="@+id/record"
+				android:layout_width="wrap_content"
+				android:layout_height="206dp"
+				android:layout_marginBottom="48dp" />
 
 			<ProgressBar
 					android:id="@+id/progress"
@@ -265,8 +264,7 @@
 					android:padding="@dimen/spacing_normal"
 					android:layout_gravity="center"
 					android:scaleType="center"
-					android:visibility="visible"
-					android:src="@drawable/ic_delete_forever_36"/>
+					android:src="@drawable/reset_record"/>
 
 			<ImageButton
 					android:id="@+id/btn_record"
@@ -296,6 +294,7 @@
 		</LinearLayout>
 
 		<ImageButton
+			android:visibility="gone"
 				android:id="@+id/btn_records_list"
 				android:layout_width="@dimen/bottom_pnl_btn_size"
 				android:layout_height="@dimen/bottom_pnl_btn_size"
