Draft screen event
Former-commit-id: b75df4e3b133987f70f18b8c40eff04ff8e8fdeb

--- a/react-native-react-native-recorder/android/src/main/res/layout/list_item_1.xml
+++ b/react-native-react-native-recorder/android/src/main/res/layout/list_item_1.xml
@@ -72,15 +72,15 @@
 					/>
 
 			<ImageButton
-					android:id="@+id/list_item_bookmark"
-					android:layout_width="36dp"
-					android:layout_height="36dp"
-					android:adjustViewBounds="true"
-					android:background="?android:selectableItemBackgroundBorderless"
-					android:contentDescription="@null"
-					android:layout_gravity="bottom|end"
-					android:scaleType="center"
-					android:src="@drawable/ic_bookmark_bordered_small"/>
+				android:id="@+id/list_item_upload"
+				android:layout_width="36dp"
+				android:layout_height="29dp"
+				android:layout_gravity="bottom|end"
+				android:adjustViewBounds="true"
+				android:background="?android:selectableItemBackgroundBorderless"
+				android:contentDescription="@null"
+				android:scaleType="center"
+				android:src="@drawable/ic_bookmark_bordered_small" />
 		</FrameLayout>
 
 		<FrameLayout
