1. Size check for draft flooding and alert to clean 2. Draft upload btn and event emit 3 . Draft bookmarks removed 4. Icon color change 5.Text color change ADB 6. File type check and decision 7.Player (Draft) state management
Former-commit-id: c86e0ff9226185815cf1e09b0ad462109503012e

--- a/react-native-react-native-recorder/android/src/main/res/layout/list_item_1.xml
+++ b/react-native-react-native-recorder/android/src/main/res/layout/list_item_1.xml
@@ -74,13 +74,14 @@
 			<ImageButton
 				android:id="@+id/list_item_upload"
 				android:layout_width="36dp"
-				android:layout_height="29dp"
+				android:layout_height="15dp"
 				android:layout_gravity="bottom|end"
 				android:adjustViewBounds="true"
 				android:background="?android:selectableItemBackgroundBorderless"
 				android:contentDescription="@null"
 				android:scaleType="center"
-				android:src="@drawable/ic_bookmark_bordered_small" />
+				android:padding="5dp"
+				android:src="@drawable/upload" />
 		</FrameLayout>
 
 		<FrameLayout
